--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body{
 .header{
     min-height: 74vh;
     max-width: 77%;
-    background: red url(../images/bg-hero-desktop.svg) no-repeat;
+    background: var(--primary-soft-color) url(../images/bg-hero-desktop.svg) no-repeat;
     background-position: cover;
 }
 
@@ -27,9 +27,14 @@ body{
 }
 
 .header .logo .btn{
-    padding: 1.9rem 7.7rem;
+    padding: 1.4rem 6.3rem;
     border-radius: 2.5rem;
-    background-color: blue;
+    box-shadow: 0 0 1rem #0000002a;
+    background-color: white;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--primary-dark-color);
+    font-family: var(--secundary-font);
 }
 
 .header .hero{
@@ -41,27 +46,36 @@ body{
 
 .header .hero .hero-info{
     max-width: 55rem;
-    background-color: yellow;
     display: flex;
     flex-direction: column;
+    padding-right: 3rem;
 }
 
 .header .hero .hero-info h1{
-    font-size: 4.3rem;
-    margin-top: 4rem;
+    font-family: var(--primary-font);
+    font-size: 4rem;
+    font-weight: 600;
+    margin-top: 1.7rem;
 }
 
 .header .hero .hero-info p{
-    font-size: 2.1rem;
-    margin-top: 4.5rem;
+    font-family: var(--secundary-font);
+    font-size: 1.8rem;
+    line-height: 2.9rem;
+    font-weight: 400;
+    margin-top: 2.9rem;
 }
 
 .header .hero .hero-info a{
-    padding: 2.3rem 10rem;
+    padding: 1.9rem 7rem;
     border-radius: 3rem;
     align-self: flex-start;
-    margin-top: 3.5rem;
-    background-color: blue;
+    margin-top: 2.8rem;
+    background-color: var(--secundary-soft-color);
+    color: white;
+    font-size: 1.4rem;
+    font-weight: 600;
+    font-family: var(--secundary-font);
 }
 
 .header .hero img{
