--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,9 +87,70 @@ body{
 }
 
 main{
-    grid-area: main;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 16rem;
+}
+
+main .main-content{
+    display: flex;
+    align-items: center;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem #0000001c;
+    max-width: 66%;
+}
+
+main .main-content .service-details h2{
+    font-size: 2.8rem;
+    font-family: var(--primary-font);
+}
+
+main .main-content .service-details p{
+    font-family: var(--secundary-font);
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+}
+
+main .main-content .ilustration{
+    width: 40rem;
+}
+
+main .first{
+    padding: 6rem 3rem 5.3rem 12rem;
+}
+
+main .first .service-details p{
+    padding-right: 17rem;
+    margin-top: 1rem;
+}
+
+main .second{
+    margin-top: 4rem;
+    padding: 8rem 2rem 8rem 12rem;
+}
+
+main .second .service-details{
+    padding-left: 18rem;
+}
+
+main .second .service-details p{
+    margin-top: 1.3rem;
+}
+
+main .third{
+    margin-top: 4rem;
+    padding: 7rem 2rem 7rem 12rem;
+}
+
+main .third .service-details{
+    padding-right: 17rem;
+}
+
+main .third .service-details p{
+    margin-top: 1.3rem;
 }
 
 footer{
-    grid-area: footer;
+    
 }
